# react

./: .env.example  .gitignore  CLAUDE.md  README.md  prd.md  pyproject.toml  requirements.txt  task.md
.claude/: settings.local.json
config/: settings.py
examples/: analysis_report.md  input.txt  input_keyword.txt  input_problem.txt  run_analysis.py
src/: __init__.py  cli.py  exceptions.py  logging_config.py  main.py
src/algorithms/: __init__.py  base.py  mock_algorithms.py
src/criteria/: keyword_check.md  length_check.md
src/executor/: executor.py
src/judge/: __init__.py  prompts.py  react_judge.py  tools.py
src/models/: __init__.py  plan.py  report.py  result.py
src/planner/: planner.py
src/registry/: __init__.py  algorithm_registry.py
src/reporter/: reporter.py
tests/: __init__.py  test_algorithms.py  test_executor.py  test_planner.py  test_registry.py  test_text_analyzer.py
